@@ -80,7 +80,7 @@ sinkpad_event_probe (GstPad * sinkpad, GstEvent * event, CollectStructure * coll
     segment = (Segment *) collect->expected_segments->data;
 
     if (compare_segments (segment, event)) {
-      collect->expected_segments = g_list_next (collect->expected_segments);
+      collect->expected_segments = g_list_remove (collect->expected_segments, segment);
       g_free (segment);
     }
     collect->gotsegment = TRUE;
@@ -364,6 +364,8 @@ GST_START_TEST (test_one_space_another)
   gst_object_unref (pipeline);
   ASSERT_OBJECT_REFCOUNT_BETWEEN(bus, "main bus", 1, 2);
   gst_object_unref (bus);
+
+  g_free (collect);
 }
 
 GST_END_TEST;
@@ -598,6 +600,8 @@ GST_START_TEST (test_one_default_another)
   gst_object_unref (pipeline);
   ASSERT_OBJECT_REFCOUNT_BETWEEN(bus, "main bus", 1, 2);
   gst_object_unref (bus);
+
+  g_free (collect);
 }
 
 GST_END_TEST;
@@ -723,6 +727,8 @@ GST_START_TEST (test_one_bin_space_another)
   gst_object_unref (pipeline);
   ASSERT_OBJECT_REFCOUNT_BETWEEN(bus, "main bus", 1, 2);
   gst_object_unref (bus);
+
+  g_free (collect);
 }
 
 GST_END_TEST;
@@ -847,6 +853,8 @@ GST_START_TEST (test_one_above_another)
   gst_object_unref (pipeline);
   ASSERT_OBJECT_REFCOUNT_BETWEEN(bus, "main bus", 1, 2);
   gst_object_unref (bus);
+
+  g_free (collect);
 }
 
 GST_END_TEST;
